--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content= "This is A'Yanna Rouse's Portfolio website" />
+        <meta name="author" content="A'Yanna Rouse" />
         <title>A'Yanna Rouse's Portfolio</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -31,15 +31,14 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary">A'Yanna Rouse</span></a>
+                    <a class="navbar-brand" href="home.html"><span class="fw-bolder text-primary">A'Yanna Rouse</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                        </ul>
+                            <li class="nav-item"><a class="nav-link active" href="home.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="resume.html">Resume</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="affiliations.html">Affiliations</a></li>
+                            <li class="nav-item"><a class="nav-link active" href="projects.html">Projects</a></li>
                     </div>
                 </div>
             </nav>
@@ -205,19 +204,25 @@
             </section>
         </main>
         <!-- Footer-->
-        <footer class="bg-white py-4 mt-auto">
-            <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0">Copyright &copy; A'Yanna Rouse 2024</div></div>
-                    <div class="col-auto">
-                        <a class="small" href="contact.html">Contact</a>
-                    </div>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="bix-footer-contact">
+                            <p> Copyright &copy; 2024 A'Yanna Rouse. All Rights Reserved.</p>
+                        <div class="logo-links">
+                            <a class="text-gradient" href="mailto:yanni620@bu.edu"><i class="bi bi-envelope"></i></a>
+                            <a class="text-gradient" href="https://www.linkedin.com/in/ayannarouse/"><i class="bi bi-linkedin"></i></a>
+                            <a class="text-gradient" href="https://github.com/a-yannarouse"><i class="bi bi-github"></i></a>
+                        </div>
                 </div>
             </div>
+            </div>
+        </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="scripts.js"></script>
     </body>
 </html>
