Reorganized assets folder

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
                                             <br>
                                             <a href="https://drive.google.com/file/d/1stC3fcyj8kNFbZStK31kV6UU_Bs7T8JS/view?usp=sharing" class="btn btn-primary" target="_blank">Video Description</a>
                                         </div>
-                                        <img class="img-fluid" src="assets/Travel Journal.png" width = "300" height="400" alt="" />
+                                        <img class="img-fluid" src="assets/Projects/Travel Journal.png" width = "300" height="400" alt="" />
                                     </div>
                                 </div>
                             </div>
@@ -81,7 +81,7 @@
                                             <br>
                                             <a href="https://a-yannarouse.github.io/Phisherman-s-Quest/Builds/Second%20Build/index.html" class="btn btn-primary" target="_blank">Play the Game!</a>
                                         </div>
-                                        <img class="img-fluid" src="assets/Fisherman.png" width = "300" height="400" alt="" />
+                                        <img class="img-fluid" src="assets/Projects/Fisherman.png" width = "300" height="400" alt="" />
                                     </div>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                             <p>Inspired by Duolingo, I made a project that teaches you Korean vowels and you take a small quiz at the end!Inspired by Duolingo, I made a project that teaches you Korean vowels and you take a small quiz at the end! </p>
                                             <a href="https://studio.code.org/projects/applab/QyOrKhvuoow1PiiWwjvT4iDNm2A-aebgPMJKSza8T3A" class="btn btn-primary" target="_blank">Play the Game!</a>
                                         </div>
-                                        <img class="img-fluid" src="assets/Korea flag.png" width = "300" height="400" alt="..." />
+                                        <img class="img-fluid" src="assets/Projects/Korea flag.png" width = "300" height="400" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -110,7 +110,7 @@
                                             <br>
                                             <a href="https://which-goblin-character-are-you.glitch.me/" class="btn btn-primary" target="_blank">Start the Quiz!</a>
                                         </div>
-                                        <img class="img-fluid" src="assets/Quiz.png" width = "300" height="400" alt="..." />
+                                        <img class="img-fluid" src="assets/Projects/Quiz.png" width = "300" height="400" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -126,7 +126,7 @@
                                             <br>
                                             <a href="https://yanni-website.glitch.me/" class="btn btn-primary" target="_blank">Check it Out!</a>
                                         </div>
-                                        <img class="img-fluid" src="assets/Personal Website.png" width = "300" height="400" alt="..." />
+                                        <img class="img-fluid" src="assets/Projects/Personal Website.png" width = "300" height="400" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -142,7 +142,7 @@
                                             <br>
                                             <a href="https://learn-autism-awareness.glitch.me/index.html" class="btn btn-primary" target="_blank">Check it Out!</a>
                                         </div>
-                                        <img class="img-fluid" src="assets/Autism Awareness.png" width = "300" height="400" alt="..." />
+                                        <img class="img-fluid" src="assets/Projects/Autism Awareness.png" width = "300" height="400" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -155,7 +155,7 @@
                                             <p> This is a class project. I used python to develop a Connect Four game, featuring computer-generated players that intelligently guess the next move. </p>
                                             <a href="https://github.com/Yanni620/Connect-Four" class="btn btn-primary" target="_blank">Github</a>
                                         </div>
-                                        <img class="img-fluid" src="assets/Connect4.jpg" width = "300" height="400" alt="..." />
+                                        <img class="img-fluid" src="assets/Projects/Connect4.jpg" width = "300" height="400" alt="..." />
                                     </div>
                                 </div>
                             </div>
@@ -168,7 +168,7 @@
                                             <p> This is a class project. I used python to develop an 8-Puzzle game to simulate the puzzle-solving process. </p>
                                             <a href="https://github.com/Yanni620/The-Eight-Puzzle" class="btn btn-primary" target="_blank">Github</a>
                                         </div>
-                                        <img class="img-fluid" src="assets/8-Puzzle.png" width = "220" height="400" alt="..." />
+                                        <img class="img-fluid" src="assets/Projects/8-Puzzle.png" width = "220" height="400" alt="..." />
                                     </div>
                                 </div>
                             </div>
