--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Learning Korean Vowels</h2>
-                                            <p>Inspired by Duolingo, I made a project that teaches you Korean vowels and you take a small quiz at the end!Inspired by Duolingo, I made a project that teaches you Korean vowels and you take a small quiz at the end! </p>
+                                            <p>Inspired by Duolingo, I made a project that teaches you Korean vowels and you take a small quiz at the end! </p>
                                             <a href="https://studio.code.org/projects/applab/QyOrKhvuoow1PiiWwjvT4iDNm2A-aebgPMJKSza8T3A" class="btn btn-primary" target="_blank">Play the Game!</a>
                                         </div>
                                         <img class="img-fluid" src="assets/Projects/Korea flag.png" width = "300" height="400" alt="..." />
