--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,32 @@
 
             gtag('config', 'G-VL17SSCS63');
         </script>
+        <style>
+            .project-card {
+                transition: transform 0.3s, box-shadow 0.3s;
+            }
+            .project-card:hover {
+                transform: scale(1.05);
+                box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+            }
+            .project-card img {
+                border-radius: 0 0 4px 4px;
+            }
+            .project-card h2 {
+                color: #007bff;
+            }
+            .project-card p {
+                color: #6c757d;
+            }
+            .btn-primary {
+                background-color: #007bff;
+                border-color: #007bff;
+            }
+            .btn-primary:hover {
+                background-color: #0056b3;
+                border-color: #0056b3;
+            }
+        </style>
     </head>
     <body class="d-flex flex-column h-100 bg-light">
         <main class="flex-shrink-0">
@@ -50,9 +76,148 @@
                         <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Projects</span></h1>
                     </div>
                     <div class="row gx-5 justify-content-center">
-                        <!-- Project Card 1-->
+                        <!-- Project Card 16-->
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder"> Youtube Channel </h2>
+                                            <p> A Django-powered web application that celebrates music by showcasing top artists across genres like pop, country, and rap. Each artist profile features curated YouTube video playlists. The platform integrates secure user authentication and authorization for users to log in and contribute their favorite videos. Designed with responsive layouts and navigation, the application delivers an engaging experience for users. </p>
+                                            <a href="https://github.com/a-yannarouse/2024-CA229-Project02" class="btn btn-primary" target="_blank"> Github </a>
+                                            <br>
+                                            <br>
+                                        </div>
+                                        <img class="img-fluid" src="assets/Projects/CA229-Project02.png" width = "300" height="400" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Project Card 15-->
+                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder"> Fitness Website </h2>
+                                            <p> An interactive Python Django-based platform that makes fitness fun and accessible. This collaborative project offers a diverse range of core, upper body, and lower body workouts. A standout feature is the dynamic "magic page," which provides personalized workout plans based on user preferences. With GitLab at the heart of its version control, the project integrated team contributions to deliver an user-centric fitness resource. </p>
+                                            <a href="https://github.com/a-yannarouse/2024-ca229-group-project" class="btn btn-primary" target="_blank"> Github </a>
+                                            <br>
+                                            <br>
+                                        </div>
+                                        <img class="img-fluid" src="assets/Projects/Group Project.png" width = "300" height="400" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Project Card 14-->
+                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder"> DreamLens </h2>
+                                            <p> DreamLens is an AI-powered platform that helps users analyze and interpret their dreams with personalized insights and recurring themes. It features OpenAI integration and Recharts for detailed analyses and dynamic visualizations, along with secure user authentication via Clerk. Built with React and Next.js, it ensures a seamless and responsive user experience. </p>
+                                            <a href="https://github.com/a-yannarouse/DreamLens" class="btn btn-primary" target="_blank"> Github </a>
+                                            <br>
+                                            <br>
+                                            <a href="https://dream-lens.vercel.app/" class="btn btn-primary" target="_blank"> Website </a> 
+                                        </div>
+                                        <img class="img-fluid" src="assets/Projects/DreamLens.png" width = "300" height="400" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Project Card 13-->
+                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder"> AfriReligions AI </h2>
+                                            <p> AfriReligions AI is a Gemini-powered chatbot designed to educate users about Santería, achieving 90% user satisfaction. It features a React-built responsive landing page that secured 10 user sign-ups in its first week. </p>
+                                            <a href="https://github.com/a-yannarouse/customer-support-ai" class="btn btn-primary" target="_blank"> Github </a>
+                                            <br>
+                                            <br>
+                                            <a href="https://afrireligion-ai.vercel.app/" class="btn btn-primary" target="_blank"> Website </a> 
+                                        </div>
+                                        <img class="img-fluid" src="assets/Projects/AfriReligions.png" width = "300" height="400" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Project Card 12-->
+                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder"> Brain Flip </h2>
+                                            <p> Brain Flip is an AI-powered study tool that lets users create personalized flashcards from custom prompts. Built with Firebase and Clerk for secure data storage and seamless logins, it also features Stripe integration for a Pro edition with advanced study tools. </p>
+                                            <a href="https://github.com/a-yannarouse/BrainFlip" class="btn btn-primary" target="_blank">Github</a>
+                                            <br>
+                                            <br>
+                                            <a href="https://brain-flip.vercel.app/" class="btn btn-primary" target="_blank"> Website</a> 
+                                        </div>
+                                        <img class="img-fluid" src="assets/Projects/BrainFlip.png" width = "300" height="400" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Project Card 11-->
+                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder"> Pantry Tracker </h2>
+                                            <p> A web app with a real-time pantry tracker, built using Firebase and the Gemini API, and deployed on Vercel. Features a responsive, theme-adaptive UI with custom themes for enhanced user experience and optimized performance. </p>
+                                            <a href="https://github.com/a-yannarouse/pantry_tracker" class="btn btn-primary" target="_blank">Github</a>
+                                            <br>
+                                            <br>
+                                            <a href="https://pantry-tracker-mu-jade.vercel.app/" class="btn btn-primary" target="_blank"> Website</a> <!-- Add the website after deployed-->
+                                        </div>
+                                        <img class="img-fluid" src="assets/Projects/Pantry.png" width = "300" height="400" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Project Card 10-->
+                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder"> Portfolio Website</h2>
+                                            <p> My official portfolio website showcases projects using HTML, CSS, and JavaScript for front-end development, with Google Analytics integrated for performance tracking. </p>
+                                            <a href="https://github.com/a-yannarouse/Portfolio" class="btn btn-primary" target="_blank">Github</a>
+                                        </div>
+                                        <img class="img-fluid" src="assets/Projects/Portfolio.png" width = "300" height="400" alt="..." />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Project Card 9-->
+                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
+                                <div class="card-body p-0">
+                                    <div class="d-flex align-items-center">
+                                        <div class="p-5">
+                                            <h2 class="fw-bolder"> Rate My Professor</h2>
+                                            <p> Rate My Professor is an AI-powered platform that lets users search and review professors through an intelligent chatbot interface. With OpenAI integration, it provides real-time, accurate professor information. Built using Prisma and Firestore, the platform ensures seamless access to ratings, reviews, and user data. </p>
+                                            <a href="https://github.com/a-yannarouse/RMP" class="btn btn-primary" target="_blank">Github</a>
+                                            <br>
+                                            <br>
+                                            <a href="https://rmp-three.vercel.app/" class="btn btn-primary" target="_blank">Check it Out!</a>
+                                        </div>
+                                        <img class="img-fluid" src="assets/Projects/RMP.png" width = "300" height="400" alt="" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Project Card 8-->
+                        <div class="col-lg-11 col-xl-9 col-xxl-8">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -68,9 +233,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Project Card 2-->
+                        <!-- Project Card 7-->
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -85,8 +250,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 3-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <!-- Project Card 6-->
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -98,8 +263,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 4-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <!-- Project Card 5-->
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -114,8 +279,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 5-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <!-- Project Card 4-->
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -130,8 +295,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 6-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <!-- Project Card 3-->
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -146,8 +311,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 7-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <!-- Project Card 2-->
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -159,8 +324,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Project Card 8-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
+                            <!-- Project Card 1-->
+                            <div class="card project-card overflow-hidden shadow rounded-4 border-0 mb-5">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -192,7 +357,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="bix-footer-contact">
-                            <p> Copyright &copy; 2024 A'Yanna Rouse. All Rights Reserved.</p>
+                            <p> Copyright &copy; 4 A'Yanna Rouse. All Rights Reserved.</p>
                         <div class="logo-links">
                             <a class="text-gradient" href="mailto:yanni620@bu.edu"><i class="bi bi-envelope"></i></a>
                             <a class="text-gradient" href="https://www.linkedin.com/in/ayannarouse/"><i class="bi bi-linkedin"></i></a>
