--- a/resume.html
+++ b/resume.html
@@ -60,13 +60,37 @@
                                     Download Resume
                                 </a>
                             </div>
+                            <!-- Experience Card 10-->
+                            <div class="card shadow border-0 rounded-4 mb-5">
+                                <div class="card-body p-5">
+                                    <div class="row align-items-center gx-5">
+                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                            <div class="bg-light p-4 rounded-4">
+                                                <div class="text-primary fw-bolder mb-2">September 2024 - Present</div>
+                                                <div class="small fw-bolder mb-2">IT Help Desk Technician </div>
+                                                <div class="small text-muted mb-2">Boston Univeristy - Metropolitian College</div>
+                                                <div class="small fw-bolder mb-2">Boston, MA</div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-8"><div> 
+                                            <ul>
+                                                <li>Provide technical assistance to 500+ faculty, staff, and students at Metropolitan College, ensuring smooth operations.</li>
+                                                <br>
+                                                <li>Diagnose and resolve 20+ hardware, software, and network issues monthly, delivering timely and efficient support for technology equipment. </li>
+                                                <br>
+                                                <li>Manage and prioritize 50+ service requests via ServiceNow to maintain a customer satisfaction rate of 97%.</li>
+                                            </ul> 
+                                        </div></div>
+                                    </div>
+                                </div>
+                            </div>
                             <!-- Experience Card 9-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">Jun 2024 - Present</div>
+                                                <div class="text-primary fw-bolder mb-2">Jun 2024 - August 2024</div>
                                                 <div class="small fw-bolder mb-2">Undergraduate Research Assistant </div>
                                                 <div class="small text-muted mb-2">Boston Univeristy</div>
                                                 <div class="small fw-bolder mb-2">Boston, MA</div>
@@ -74,7 +98,7 @@
                                         </div>
                                         <div class="col-lg-8"><div> 
                                             <ul>
-                                                <li>Engineered and led a digital engagement campaign using Minecraft, increasing awareness of Africana Diaspora Religions by 35% within 3 months.</li>
+                                                <li>Engineered and led a digital engagement campaign using Minecraft, increasing awareness of Africana Diaspora Religions within 3 months.</li>
                                                 <br>
                                                 <li>Streamlined research methodologies, enhancing data collection efficiency and improving project timelines by 20%. </li>
                                                 <br>
@@ -369,9 +393,9 @@
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Web Development</div></div>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Microsoft Office</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Adobe Creative Cloud</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">User Interface Design</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Full Stack Engineering</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Microsoft Excel</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Adobe Creative Cloud</div></div>
                                         </div>
                                     </div>
                                     <!-- Languages list-->
@@ -381,19 +405,44 @@
                                             <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Languages</span></h3>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">HTML</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">CSS</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Python</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Java</div></div>
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">JavaScript</div></div>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Java</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Python</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">HTML/CSS</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">TypeScript</div></div>
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">C#</div></div>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Bash</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Shell Scripting</div></div>
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">SQL</div></div>
                                         </div>
+                                    </div>
+                                    <br>
+                                    <br>
+                                    <!-- Frameworks/Libraries list-->
+                                    <div class="mb-0">
+                                        <div class="d-flex align-items-center mb-4">
+                                            <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3"><i class="bi bi-code-slash"></i></div>
+                                            <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Frameworks & Libraries</span></h3>
+                                        </div>
+                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Django</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Express.js</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Firebase</div></div>
+                                        </div>
+                                        <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Mongoose</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">React Native</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">REST APIs</div></div>
+                                        </div>
+                                        <div class="row row-cols-1 row-cols-md-3">
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Next.js</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Pandas</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">NumPy</div></div>
+                                        </div>
+                                    </div>
                                     </div>
                                 </div>
                             </div>
